荒らしの検出をしたあとにユーザーに特定のロールを付与する (#1)
* [Add] BANするように

* [Add]  build & upload artifact on ci

* [Add] release flag on ci

* Add deserializer of role id

* Add role id field to config struct

* [Change] Give a role instead of banning the user

* [Add] Delete the detected message

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,9 +42,21 @@ jobs:
         uses: actions-rs/cargo@v1.0.3
         with:
           command: test
-          args: --no-run --locked
+          args: --no-run --locked --release
 
       - name: unit test
         uses: actions-rs/cargo@v1.0.3
         with:
           command: test
+          args: --release
+
+      - name: build
+        uses: actions-rs/cargo@v1.0.3
+        with:
+          command: build
+          args: --release
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: ./target/release/discord-spam-reporter
